--- a/UpgradeTalk/app/src/main/res/layout/activity_main.xml
+++ b/UpgradeTalk/app/src/main/res/layout/activity_main.xml
@@ -4,25 +4,44 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:gravity="bottom"
     android:background="#1AFFFFFF"
+    android:gravity="bottom"
     app:umanoDragView="@id/dragView"
-    app:umanoPanelHeight="70dp"
     app:umanoOverlay="false"
+    app:umanoPanelHeight="70dp"
     app:umanoParallaxOffset="200dp"
-    app:umanoShadowHeight="10dp">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="g">
-
-    </TextView>
+    app:umanoShadowHeight="10dp"
+    tools:context=".MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/frameSize"
+            android:layout_marginTop="20dp">
+
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/viewpager"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/frameSize"
+                android:clipChildren="false"
+                android:clipToPadding="false" />
+
+            <me.relex.circleindicator.CircleIndicator3
+                android:id="@+id/indicator"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_gravity="bottom" />
+        </FrameLayout>
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/dragView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <TextView
