--- a/UpgradeTalk/app/src/main/res/layout/fragment_first.xml
+++ b/UpgradeTalk/app/src/main/res/layout/fragment_first.xml
@@ -5,10 +5,10 @@
     android:layout_height="match_parent"
     tools:context=".FragmentFirst">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
+    <Button
+        android:id="@+id/callBtn"
+        android:layout_gravity="center"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:text="불러오기" />
 </FrameLayout>
